modules/gdscript/tests/scripts/analyzer/errors/convert_array_to_packed_array.gd
func test():
	var array: Array[int]
	var packed_array: PackedVector2Array

	# these types should not be compatible
	packed_array = array;
